2019-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (ReadMATImage, ReadMATImageV4): Implement
	subimage/subrange support.  Should resolve oss-fuzz 14999
	"graphicsmagick/coder_MAT_fuzzer: Out-of-memory in
	graphicsmagick_coder_MAT_fuzzer".

	* coders/tiff.c (TIFFMapBlob): Fix compile problem if
	LOG_TIFF_BLOB_IO is defined.

	* coders/wpg.c (ExtractPostscript): Improve performance.  Avoid
	temporary files if possible.  Avoid additional memory allocations
	if possible.  Should address oss-fuzz issue 18173
	"graphicsmagick:enhance_fuzzer: Timeout in enhance_fuzzer" and
	oss-fuzz issue 17714 "graphicsmagick:coder_WPG_fuzzer: Timeout in
	coder_WPG_fuzzer".

2019-10-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (PNMInteger): Place a generous arbitrary limit on
	the amount of PNM comment text to avoid denial of service
	opportunity.  Fixes oss-fuzz 18162 "Timeout · coder_PNM_fuzzer".

2019-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dps.c (ReadDPSImage): Fix memory leak when OpenBlob()
	reports failure.  Same as ImageMagick CVE CVE-2019-16709.

2019-09-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Skip
	unsupported/invalid format 0.  Fixes oss-fuzz issue 17597
	"graphicsmagick:coder_SFW_fuzzer: Heap-buffer-overflow in
	GenerateEXIFAttribute".

2019-09-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Change by Alex Gaynor so that the
	correct oss-fuzz fuzzing engine should be used.

2019-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/static.c (OpenModule): Static module loader should use
	upper-cased magick string when searching for a module alias.
	Fixes SourceForge issue #613 "static module loader is still
	case-sensitive".

2019-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Report status of zstd (FaceBook Zstandard)
	compression in configuration summary.
