@@ -38,6 +38,8 @@
 <p>2019-10-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/wpg.c (ReadWPGImage): Implement subimage/subrange
+support.</li>
 <li>coders/mat.c (ReadMATImage, ReadMATImageV4): Implement
 subimage/subrange support.  Should resolve oss-fuzz 14999
 &quot;graphicsmagick/coder_MAT_fuzzer: Out-of-memory in
